Add game functionality

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <script src="./tictactoe.js" defer></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
     <main>
         <h1>Tic Tac Toe</h1>
-        <div class="game-board">
-            <div class="board-square o-inside"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
-            <div class="board-square x-inside"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
-            <div class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
-            <div class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
-            <div class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
-            <div class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
-            <div class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
-            <div class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
-            <div class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></div>
+        <div class="game-board" data-current-player="x">
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+            <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
         </div>
     </main>
 </body>
