Add namable players

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <h1>Tic Tac Toe</h1>
-        <div class="game-board" data-current-player="x">
+        <div class="game-board" data-current-player>
             <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
             <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
             <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
@@ -21,6 +21,22 @@
             <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
             <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
             <button class="board-square"><img src="./o.svg" alt="O" class="o"><img src="./x.svg" alt="X" class="x"></button>
+        </div>
+        
+        <form action="#" method="post">
+            <h2>Enter player names</h2>
+            <label for="player1-name">Player 1: <span class="redtext">(X)</span>
+                <input type="text" name="p1name" id="player1-name">
+            </label>
+            <label for="player2-name">Player 2: <span class="bluetext">(O)</span>
+                <input type="text" name="p2name" id="player2-name">
+            </label>
+            <button type="submit" class="form-button" id="start-button">Start game</button>
+        </form>
+
+        <div class="status-box">
+            <p>Enter the players names to start.</p>
+            <button type="button" class="form-button" id="reset-button">Reset</button>
         </div>
     </main>
 </body>
